# Customer_Agent

./: .dockerignore  .env.example  .gitignore  2026-04-12-rag-knowledge-restructure-implementation-plan.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  md5.text  md5_maintenance_guides.text  md5_policies.text  md5_policy_rules.text  md5_questions.text  md5_troubleshooting_cases.text  pyproject.toml
agent/: react_agent.py  response_policy.py  state.py
api/: main.py
chroma_db/: chroma.sqlite3
config/: chroma.yml  rag.yml
data/: chat_history.json  issue_status.json  test_queries.jsonl  扫拖一体机器人100问.txt
docs/: architecture.md  deployment.md  evaluation.md  interview_talking_points.md  rag_pipeline.md
model/: factory.py
observability/: error_codes.py  logging.py  tracing.py
prompts/: rag_summarize.txt
rag/: context_formatter.py  enhanced_retrieval_service.py  eval.py  eval_metrics.py  eval_report.py  evidence.py  fusion.py  pipeline_types.py  query_analysis.py  query_router.py  rag_service.py  reranker.py  retrieval_service.py  structured_retriever.py  vector_store.py
reports/: eval_report.md
scripts/: build_maintenance_guides.py  load_dataset_with_local_bge_m3.py  run_external_rag_eval.py  run_rag_eval.py
storage/: database.py  models.py
tests/: test_api_chat.py  test_api_health.py  test_build_maintenance_guides.py  test_context_formatter.py  test_enhanced_retrieval_service.py  test_eval.py  test_evidence.py  test_external_rag_eval.py  test_fusion.py  test_issue_state_machine.py  test_model_factory.py  test_pipeline_types.py  (+10 more)
(+49 files in other folders)
