[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "rag*", "utils*", "model*", "config*", "prompts*", "components*", "tests*"]

[project]
name = "customer-agent"
version = "0.1.0"
description = "Traceable RAG customer support agent platform for robotic vacuum after-sales scenarios"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "langchain-openai>=0.3",
    "chromadb>=0.5",
    "dashscope>=1.20",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "sentence-transformers>=3.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
